# Easy-Graph

./: .bumpversion.cfg  .envrc  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  CAPABILITIES_DEMO.md  CMakeLists.txt  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  LICENSE  LICENSE.NetworkX  MANIFEST.in  Makefile  README.md  README.rst  _typos.toml  annotations.json  capabilities_output.txt  copy-tscp-intel-macos-wheel-to-artifact-dir.sh  f8  meta.yaml  pyproject.toml  pytest.ini  requirements.txt  setup.py  setuppy-install.sh  t1.py  test.py  test_capabilities_standalone.py  tox-conda-test.ini  tox-conda.ini  tox-test.ini  tox.ini  train_gnn.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: ---bug-report.md  ---documentation.md  ---everything-else.md  ---feature-request.md  config.yml
.github/workflows/: bench.yaml  bench.yml  benchmarking.yaml  buildwheel.yml  cibw-pybind11.yaml  diagram.yml  dummy_test.yaml  issue-translator.yml  linter.yaml  pip-pybind11.yaml  pr_code_check.yaml  pre-commit.yaml  release-all-mlwb.yaml  release-cibuildwheel.yaml  release-macos.yaml  release-manylinux.yaml  release.yaml  stale.yaml  test-intel-mac-cpp.yaml  test.yaml  translator.yaml  wheel_publish.yml
.github/workflows/archive/: release-all-mlwb.yaml  release-cibuildwheel.yaml  release-macos.yaml  release-manylinux.yaml
_cpp_easygraph/: CMakeLists.txt
_cpp_easygraph/include/: directed_graph.h  operation.h
_cpp_easygraph/src/: cpp_easygraph.cpp
cpp_easygraph/: CMakeLists.txt  README.md  cpp_easygraph.cpp
cpp_easygraph/classes/: __init__.h  coo_graph.h  csr_graph.h  directed_graph.cpp  directed_graph.h  graph.cpp  graph.h  linkgraph.h  operation.cpp  operation.h  segment_tree.cpp
cpp_easygraph/common/: common.cpp  common.h  utils.cpp  utils.h
cpp_easygraph/functions/: __init__.h  components.h  not_sorted.h  path.h  structural_holes.h
cpp_easygraph/functions/basic/: __init__.h  avg_degree.cpp  avg_degree.h  cluster.cpp  mst.cpp  mst.h
cpp_easygraph/functions/centrality/: __init__.h  betweenness.cpp  centrality.h  closeness.cpp  eigenvector.cpp  katz_centrality.cpp
cpp_easygraph/functions/components/: __init__.h  biconnected.cpp  biconnected.h  connected.cpp  connected.h  strongly_connected.cpp  strongly_connected.h
cpp_easygraph/functions/cores/: __init__.h  k_cores.cpp  k_cores.h
cpp_easygraph/functions/not_sorted/: __init__.h  cluster.cpp  cluster.h  mst.cpp  mst.h
cpp_easygraph/functions/pagerank/: __init__.h  pagerank.cpp
cpp_easygraph/functions/path/: __init__.h  mst.cpp  mst.h  path.cpp  path.h
cpp_easygraph/functions/structural_holes/: __init__.h  evaluation.cpp  evaluation.h
cpp_easygraph/include/: biconnected.h  cluster.h  common.h  evaluation.h  graph.h  path.h  utils.h
cpp_easygraph/src/: biconnected.cpp  cluster.cpp  directed_graph.cpp  evaluation.cpp  graph.cpp  operation.cpp  path.cpp  utils.cpp
docs/docs/source/: easygraph.classes.base.rst  easygraph.classes.directed_graph.rst  easygraph.classes.graph.rst  (+150 more)
easygraph/: __init__.py  _global.py  amazon_computers.py  capabilities.py  convert.py  exception.py  test.emb
easygraph/classes/: __init__.py  base.py  directed_graph.py  directed_multigraph.py  graph.py  graphviews.py  hypergraph.py  multigraph.py  operation.py  test_base_graph_class.py
easygraph/datapipe/: __init__.py  common.py  loader.py  normalize.py
easygraph/datasets/: __init__.py  amazon_photo.py  arxiv.py  base.py  citation_graph.py  coauthor.py  cooking_200.py  eg_dataset.py  email_enron.py  email_eu.py  facebook_ego.py  flickr.py  get_sample_graph.py  github.py  gnn_benchmark.py  graph_dataset_base.py  hospital_lyon.py  karate.py  krate.py  ppi.py  reddit.py  roadnet.py  twitter_ego.py  utils.py  web_google.py  wiki_topcats.py
easygraph/experiments/: __init__.py  base.py  vertex_classification.py
easygraph/functions/: __init__.py  isolate.py
easygraph/ml_metrics/: __init__.py  base.py  classification.py
easygraph/model/: __init__.py
easygraph/nn/: __init__.py  loss.py  regularization.py
easygraph/random/: __init__.py  _seed.py  hypergraph.py
easygraph/randomhypergraph/: __init__.py  hypergraph.py
easygraph/readwrite/: __init__.py  edgelist.py  gexf.py  gml.py  graphml.py  graphviz.py  json.py  pajek.py  pickle.py  ucinet.py
easygraph/tests/: script_test_cpp_easygraph.py  teddy_test_cpp_easygraph_sanity_check.py  test_capabilities.py  test_convert.py  test_cpp_easygraph.py
easygraph/utils/: __init__.py  alias.py  convert_class.py  convert_to_matrix.py  decorators.py  download.py  exception.py  index_of_node.py  logging.py  mapped_queue.py  misc.py  relabel.py  sparse.py  type_change.py
examples/: README.md  capabilities_example.py
gpu_easygraph/: CMakeLists.txt  gpu_easygraph.cpp  gpu_easygraph.h
gpu_easygraph/common/: common.h  err.cpp  err.h  utils.cpp  utils.cu  utils.cuh  utils.h
gpu_easygraph/functions/basic/: ECL-MST_10.cu  ECLgraph.h  Makefile  cluster.cu  gpu_graph_scc.cu  pagerank.cu
gpu_easygraph/functions/centrality/: baseline  bc_mem_prev  betweenness_centrality.cu  betweenness_centrality.cuh  centrality.cpp  centrality.h  closeness_centrality.cu  closeness_centrality.cuh
gpu_easygraph/functions/core/: core.cpp  core.h  k_core.cu  k_core.cuh
gpu_easygraph/functions/path/: path.cpp  sssp_dijkstra.cu  sssp_dijkstra.cuh
gpu_easygraph/functions/structural_holes/: constraint.cpp  constraint.cu  constraint.cuh  effective_size.cpp  effective_size.cu  effective_size.cuh  evaluation.cpp  evaluation.cu  evaluation.cuh  hierarchy.cpp  hierarchy.cu  hierarchy.cuh
scripts/: README.md  Solution.md  build_easygraph_linux.sh  build_easygraph_macos.sh  build_easygraph_windows.bat  build_packages_linux.sh  check_installation.py  install_boost_python_linux.sh  install_boost_python_windows.bat  install_easygraph_linux.sh  upload_easygraph.sh  windows_utils.py
scripts/archive/: README.md  build_easygraph_macos.sh  build_easygraph_windows.bat  build_packages_linux.sh  check_installation.py
src/cpp_easygraph/: cpp_easygraph.cpp
src/easygraph/: __init__.py  convert.py
(+344 files in other folders)
