[tool.poetry]
name = "python-easygraph"
version = "0.2a40"
description = "Easy Graph"
authors = ["Fudan MSN Group <easygraph@163.com>"]
license = "BSD"

[tool.poetry.dependencies]
python = ">=3.6 <=3.9"
numpy = ">=1.18.5"
tqdm = ">=4.49.0"
tensorflow = ">=2.0.0"
joblib = ">=0.16.0"
six = ">=1.15.0"
gensim = ">=4.1.2"
progressbar33 = ">=2.4"
scikit-learn = ">=0.24.0"
scipy = ">=1.5.2"
matplotlib = ">=3.3.0"
statsmodels = ">=0.12.0"
progressbar = ">=2.5"

[tool.poetry.dev-dependencies]
pytest = ">=5.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
