[project]
name = "Python-EasyGraph"
version = "0.2a40"
authors = [
    { name = "Fudan MSN Group", email = "easygraph@163.com" },
]
description = "Easy Graph"
readme = "README.rst"
requires-python = ">=3.10"
license = "BSD-3-Clause"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
]
dependencies = [
    "gensim>=4.2.0",
    "joblib>=1.1.1",
    "matplotlib>=3.3.4",
    "nose>=1.3.7",
    "numpy>=1.19.5",
    "pandas>=0.25.3",
    "progressbar>=2.5",
    "progressbar33>=2.4",
    "scikit-learn>=0.24.2",
    "scipy>=1.5.4",
    "six>=1.17.0",
    "statsmodels>=0.12.2",
    "tqdm>=4.64.1",
]

[project.scripts]
easy-graph = "easy_graph:main"

[tool.scikit-build]
minimum-version = "build-system.requires"
build-dir = "build/{wheel_tag}"

[build-system]
requires = ["scikit-build-core>=0.10", "pybind11"]
build-backend = "scikit_build_core.build"

[tool.setuptools.packages.find]
where = ["."]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.14.1",
    "scikit-build-core>=0.11.6",
]


[tool.pytest.ini_options]
python_files = "**/tests/test_*.py"
addopts = "-ra --disable-warnings"

[tool.scikit-build.cmake]
source-dir = "cpp_easygraph"
